# email-oauth-fastapi-template

./: Makefile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  depends.py  errors.py  main.py  models.py
src/alembic/: env.py
src/alembic/versions/: 075adc7f66c4_add_indexes.py  45ea4a65b975_add_tokens.py  99fb33f9cbb1_add_composite_index.py  9a8d167ee998_rename_fields.py  cddd8ce3d09a_remove_indexes.py  d6a13e901408_unique_constraint_to_email_external_id.py  ee37eab68f6d_create_tables.py
src/api/: auth.py  emails.py
src/db/: models.py  utils.py
src/services/auth/: callback.py  crud.py  dtos.py  google.py  provider_registry.py  tokens.py
src/services/auth/providers/: base.py  google.py
src/services/emails/: sync.py
src/services/emails/providers/: base.py  google.py
