[project]
name = "mailzen"
version = "0.1.0"
description = "Clean email box agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "fastapi[standard]>=0.128.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.11",
]
